# airflow-clickhouse-plugin

./: .gitignore  .gitpod.yml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-to-pypi.yml  tests.yml
airflow_clickhouse_plugin/: __init__.py  __version__.py
airflow_clickhouse_plugin/hooks/: clickhouse_hook.py
airflow_clickhouse_plugin/operators/: __init__.py  clickhouse_operator.py
airflow_clickhouse_plugin/sensors/: __init__.py  clickhouse_sql_sensor.py
clickhouse_plugin/: __init__.py  __version__.py
clickhouse_plugin/hooks/: __init__.py  clickhouse_hook.py
clickhouse_plugin/operators/: clickhouse_operator.py
src/airflow_clickhouse_plugin/hooks/: clickhouse.py  clickhouse_dbapi.py  clickhouse_dbapi_hook.py  clickhouse_hook.py
src/airflow_clickhouse_plugin/operators/: clickhouse.py  clickhouse_dbapi.py  clickhouse_operator.py  clickhouse_to_s3.py
src/airflow_clickhouse_plugin/sensors/: clickhouse.py  clickhouse_dbapi.py  clickhouse_dbapi_sensor.py  clickhouse_sensor.py  clickhouse_sql_sensor.py
tests/: __init__.py  test_hook.py  test_operator.py  util.py
tests/integration/: airflow_env_conn.py  test_hook.py  test_operator.py  test_sql_sensor.py  util.py
tests/integration/hooks/: test_clickhouse.py  test_clickhouse_dbapi.py
tests/integration/operators/: test_clickhouse.py  test_clickhouse_dbapi.py
tests/unit/: test_hook.py  test_operator.py  test_sql_sensor.py
tests/unit/hooks/: test_clickhouse.py  test_clickhouse_dbapi.py  test_clickhouse_dbapi_hook.py  test_clickhouse_hook.py  test_strtobool.py
tests/unit/operators/: test_clickhouse.py  test_clickhouse_dbapi.py  test_clickhouse_operator.py
tests/unit/sensors/: test_clickhouse.py  test_clickhouse_dbapi.py
