[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "airflow-clickhouse-plugin"
version = "1.7.0"
description = "airflow-clickhouse-plugin — Airflow plugin to execute ClickHouse commands and queries"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT License" }
authors = [
    { name = "Anton Bryzgalov, Viktor Taranenko", email = "tony.bryzgaloff@gmail.com" },
]
keywords = [
    "clickhouse",
    "airflow",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
]
dynamic = [
    "dependencies",
]

[project.urls]
GitHub = "https://github.com/bryzgaloff/airflow-clickhouse-plugin"
Documentation = "https://github.com/bryzgaloff/airflow-clickhouse-plugin#airflow-clickhouse-plugin"
Changelog = "https://github.com/bryzgaloff/airflow-clickhouse-plugin/releases"
Issues = "https://github.com/bryzgaloff/airflow-clickhouse-plugin/issues"

[project.optional-dependencies]
"common.sql" = [
    # Airflow supports common.sql extra from 2.3.0 version
    # For versions below, this extra will be ignored
    "apache-airflow[common.sql]>=2.2.0,<3.3.0",
    # For versions below 2.3.0, CommonSQL is installed separately
    # CommonSQL provider version is pinned as of Airflow 3.2.1
    "apache-airflow-providers-common-sql>=1.18.0",
]
"openlineage" = [
    # Airflow supports openlineage extra from 2.7.0 version
    # For versions below, this extra will be ignored
    "apache-airflow[openlineage]>=2.2.0,<3.3.0",
    # For versions below 2.7.0, OpenLineage is installed separately
    # OpenLineage provider version is pinned as of Airflow 3.2.1
    "apache-airflow-providers-openlineage>=2.3.0",
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true  # add directories without __init__.py
