[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "airflow-clickhouse-plugin"
version = "1.7.0"
description = "airflow-clickhouse-plugin — Airflow plugin to execute ClickHouse commands and queries"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT License" }
authors = [
    { name = "Anton Bryzgalov, Viktor Taranenko", email = "tony.bryzgaloff@gmail.com" },
]
keywords = [
    "clickhouse",
    "airflow",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "apache-airflow>=2.0.0,<3.3.0",
    "clickhouse-driver~=0.2.9",
]

[project.urls]
GitHub = "https://github.com/bryzgaloff/airflow-clickhouse-plugin"
Documentation = "https://github.com/bryzgaloff/airflow-clickhouse-plugin#airflow-clickhouse-plugin"
Changelog = "https://github.com/bryzgaloff/airflow-clickhouse-plugin/releases"
Issues = "https://github.com/bryzgaloff/airflow-clickhouse-plugin/issues"

[project.optional-dependencies]
"common.sql" = [
    # This version includes SQLExecuteQueryOperator
    "apache-airflow-providers-common-sql>=1.3.0",
]
"openlineage" = [
    # Minimum version which includes the functions used
    "apache-airflow-providers-openlineage>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true  # add directories without __init__.py
